# simbrief_hub

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile.common  Makefile.lin64  Makefile.mac64  Makefile.mgw64  README.md  cdm_cfg.default.json  cdm_get_parse.cpp  cdm_test.cpp  http_get.cpp  log_msg.cpp  ofp_get_parse.cpp  sbh.cpp  sbh.h  skunkcrafts_updater.cfg  skunkcrafts_updater.cfg.template  skunkcrafts_updater_beta.cfg  skunkcrafts_updater_beta.cfg.template  ui.cpp  ui.h  xml.fetcher.xml
.github/workflows/: buildtest.yaml  release.yaml
ImgWindow/: ImgWindow.h
release/simbrief_hub/: cdm_cfg.default.json  skunkcrafts_updater.cfg  skunkcrafts_updater_beta.cfg  skunkcrafts_updater_sizeslist.txt  skunkcrafts_updater_whitelist.txt
release/simbrief_hub/lin_x64/: simbrief_hub.xpl
release/simbrief_hub/mac_x64/: simbrief_hub.xpl
release/simbrief_hub/win_x64/: simbrief_hub.xpl
simbrief_hub/: README.html
